--- a/exercícios/ex022/fundo001.html
+++ b/exercícios/ex022/fundo001.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>teste de imagem de fundo</title>
     <style>
+        body{
+            background-image: url('imagens/wallpaper001.jpg');
+        }
         div.quadrado{
             display: inline-block;
             border-radius: 10px;
@@ -14,16 +17,25 @@
             width: 300px;
             height: 300px;
         }
+        #q1{
+            background-color: lightblue;
+        }
+        #q2{
+            background-image: linear-gradient(to bottom, yellow, red);
+        }
+        #q3{
+            background-image: url('imagens/pattern003.png');
+        }
     </style>
 </head>
 <body>
-    <div class="quadrado">
+    <div class="quadrado" id="q1">
 
     </div>
-    <div class="quadrado">
+    <div class="quadrado" id="q2">
 
     </div>
-    <div class="quadrado">
+    <div class="quadrado" id="q3">
 
     </div>
 </body>
