--- a/exercícios/ex022/fundo006.html
+++ b/exercícios/ex022/fundo006.html
@@ -13,10 +13,15 @@
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
         }
+        /* 
+        Shorthand - background
+        color > image > position > repeat > [size] > attachment
+        */
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +32,7 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam excepturi sunt architecto reprehenderit odio libero aspernatur inventore animi quam totam rerum modi illum fuga, expedita provident, nobis beatae magnam harum?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, perspiciatis! Dolor, autem accusantium. Accusantium velit fugiat ipsa debitis asperiores nihil ipsum eaque beatae facilis maiores quam ut, dicta consequuntur? Debitis!Lor Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo perspiciatis, inventore beatae possimus est dolore nisi culpa tempora repellendus maxime dolorum quis laborum asperiores error iure doloribus fuga excepturi eius.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam excepturi sunt architecto reprehenderit odio libero aspernatur inventore animi quam totam rerum modi illum fuga, expedita provident, nobis beatae magnam harum?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, perspiciatis! Dolor, autem accusantium. Accusantium velit fugiat ipsa debitis asperiores nihil ipsum eaque beatae facilis maiores quam ut, dicta consequuntur? Debitis!Lor Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo perspiciatis, inventore beatae possimus est dolore nisi culpa tempora repellendus maxime dolorum quis laborum asperiores error iure doloribus fuga excepturi eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure impedit aperiam consequuntur deserunt, voluptates minima non, eaque pariatur repellendus vitae provident, similique possimus quibusdam optio sit quaerat. Mollitia, ab magni? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque quasi iure dolores aliquid, unde praesentium laudantium natus quos optio adipisci ipsum rerum fuga iusto atque omnis reprehenderit tempore similique rem!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eaque beatae molestiae quaerat exercitationem corrupti necessitatibus voluptates quo iste asperiores. Soluta quidem natus eveniet quisquam repudiandae inventore voluptates sapiente suscipit? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit ducimus odit perferendis minima maxime. Dolore repellat corrupti expedita ab voluptatibus, vitae sequi sapiente ex vel amet fuga non eius error?</p>
     </main>
 </body>
 </html>
