--- a/desafios/desafioge/paginage.html
+++ b/desafios/desafioge/paginage.html
@@ -10,7 +10,16 @@
 </head>
 <body>
     <header>
-        <h1>ge</h1>
+        <div class="menu">
+            <nav>
+                MENU
+            </nav>
+            <nav >
+                TIMES
+            </nav> 
+        </div>
+        
+        <h1 class="titulo">ge</h1>
     </header>
     <main>
         <section>
